--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.11.3",
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.7.9",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18"
