--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.11.3",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
+    "lucide-react": "^0.475.0",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18"
