--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "eslint": "^8",
