--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.4",
     "@heroicons/react": "^2.2.0",
-    "@kinde-oss/kinde-auth-nextjs": "^2.5.1",
+    "@tanstack/react-query": "^5.67.2",
     "axios": "^1.7.9",
     "lucide-react": "^0.475.0",
     "next": "14.2.23",
