--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.3.0"
   },
   "devDependencies": {
